--- a/Alafrançaise.html
+++ b/Alafrançaise.html
@@ -1,234 +1,241 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A la française</title>
-    <link rel="stylesheet" href="./css/menu.css">
-    <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/menu.css" />
+    <script
+      src="https://kit.fontawesome.com/c6b5df462f.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div class="loader">
-        <span class="loader-quart"></span>
+      <span class="loader-quart"></span>
     </div>
     <header>
-        <div class="arrow-back">
-            <a href="index.html">
-            <i class="fas fa-arrow-left"></i>
-            </a>
-        </div>
-        <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
+      <div class="arrow-back">
+        <a href="index.html">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+      </div>
+      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood" />
     </header>
     <div class="img">
-        <img class="img_image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+      <img
+        class="img_image"
+        src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="A la française"
+      />
     </div>
     <section class="menus">
-        <div class="menu">
-            <div class="menu-header">
-                <h2 class="menu-header-title">A la française</h2>
-                <i class="far fa-heart"></i>
-                <i class="fas fa-heart"></i>
-            </div>
-               
-            <section class="grid">
-                <div class="grid-bloc">
-                <div class="grid-title">
-                    <h3>Entrées</h3>
-                </div>
-                <div class="menu-grid-bloc">
-                        <div class="dish-and-price">
-                            <div class="menu-case-dish">
-                            <div class="dish-and-price-title">
-                                <h4>Tartare de poulpe acidulé</h4>
-                            </div>
-                            <div class="dish-and-price-subtitle">
-                                <p>Aux zests d'orange</p>
-                            </div>
-                            </div>
-                            <p class="price">25€</p>
-                        </div>
-                        <div class="menu-check-confirmation">
-                            <div class="menu-item">
-                                <i class="fa-check fas menu-item-icon"></i>
-                            </div>
-                        </div>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Velouté de légumes d'antan</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Carotte, panais,topinambour</p>
-                        </div>
-                        </div>
-                        <p class="price">35€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Soupe à l'oignon</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Revisité</p>
-                        </div>
-                        </div>
-                        <p class="price">20€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                 </div>
-                 </div>
-                 <div class="grid-bloc">
-                 <div class="grid-title">
-                    <h3>Plats</h3>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Coquilles Saint-Jacques</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Accompagné d'une purée de panais</p>
-                        </div>
-                        </div>
-                        <p class="price">40€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Magret de canard</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Et parmentier de pommes de terres</p>
-                        </div>
-                        </div>
-                        <p class="price">35€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                        </div>
-                        </div>
-                        <p class="price">44€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                 </div>
-                 <div class="grid-bloc">
-                <div class="grid-title">
-                    <h3>Desserts</h3>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Pétales de violettes glacés</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Et purée de noisettes</p>
-                        </div>
-                        </div>
-                        <p class="price">18€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                </div> 
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Fondant au chocolat</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Revisité</p>
-                        </div>
-                        </div>
-                        <p class="price">22€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
+      <div class="menu">
+        <div class="menu-header">
+          <h2 class="menu-header-title">A la française</h2>
+          <i class="far fa-heart"></i>
+          <i class="fas fa-heart"></i>
+        </div>
+
+        <section class="grid">
+          <div class="grid-bloc">
+            <div class="grid-title">
+              <h3>Entrées</h3>
             </div>
             <div class="menu-grid-bloc">
-                <div class="dish-and-price">
-                    <div class="menu-case-dish">
-                    <div class="dish-and-price-title">
-                        <h4>Millefeuille crouistllant</h4>
-                    </div>
-                    <div class="dish-and-price-subtitle">
-                        <p>Myrtilles et pâtes d'amande</p>
-                    </div>
-                    </div>
-                    <p class="price">23€</p>
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Tartare de poulpe acidulé</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Aux zests d'orange</p>
+                  </div>
                 </div>
-                <div class="menu-check-confirmation">
-                    <div class="menu-item">
-                        <i class="fa-check fas menu-item-icon"></i>
-                    </div>
+                <p class="price">25€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
                 </div>
-        </div>  
-                 </div>
-            </section>
-        </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Velouté de légumes d'antan</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Carotte, panais,topinambour</p>
+                  </div>
+                </div>
+                <p class="price">35€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Soupe à l'oignon</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Revisité</p>
+                  </div>
+                </div>
+                <p class="price">20€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-bloc">
+            <div class="grid-title">
+              <h3>Plats</h3>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Coquilles Saint-Jacques</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Accompagné d'une purée de panais</p>
+                  </div>
+                </div>
+                <p class="price">40€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Magret de canard</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Et parmentier de pommes de terres</p>
+                  </div>
+                </div>
+                <p class="price">35€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Sur son lit de gnocchis aux légumes</p>
+                  </div>
+                </div>
+                <p class="price">44€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-bloc">
+            <div class="grid-title">
+              <h3>Desserts</h3>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Pétales de violettes glacés</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Et purée de noisettes</p>
+                  </div>
+                </div>
+                <p class="price">18€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Fondant au chocolat</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Revisité</p>
+                  </div>
+                </div>
+                <p class="price">22€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Millefeuille crouistllant</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Myrtilles et pâtes d'amande</p>
+                  </div>
+                </div>
+                <p class="price">23€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </section>
     <div class="command">
-        <button class="btn">Commander</button>
+      <button class="btn">Commander</button>
     </div>
     <footer>
-        <h4>Ohmyfood</h4>
-        <p>
-            <i class="fas fa-utensils"></i>
-            proposer un restaurant
-        </p>
-        <p>
-            <i class="fas fa-hands-helping"></i>
-            Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p>
-            <a href="mailto:contact@ohmyfood.fr">Contact</a>
-        </p>
+      <h4>Ohmyfood</h4>
+      <p>
+        <i class="fas fa-utensils"></i>
+        proposer un restaurant
+      </p>
+      <p>
+        <i class="fas fa-hands-helping"></i>
+        Devenir partenaire
+      </p>
+      <p>Mentions légales</p>
+      <p>
+        <a href="mailto:contact@ohmyfood.fr">Contact</a>
+      </p>
     </footer>
-</body>
+  </body>
 </html>
