--- a/Lanoteenchantée.html
+++ b/Lanoteenchantée.html
@@ -1,249 +1,258 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La note enchantée</title>
-    <link rel="stylesheet" href="./css/menu.css">
-    <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/menu.css" />
+    <script
+      src="https://kit.fontawesome.com/c6b5df462f.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div class="loader">
-        <span class="loader-quart"></span>
+      <span class="loader-quart"></span>
     </div>
     <header>
-        <div class="arrow-back">
-            <a href="index.html">
-            <i class="fas fa-arrow-left"></i>
-            </a>
-        </div>
-        <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
+      <div class="arrow-back">
+        <a href="index.html">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+      </div>
+      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood" />
     </header>
     <div class="img">
-        <img class="img_image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+      <img
+        class="img_image"
+        src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        alt="La note enchantée"
+      />
     </div>
     <section class="menus">
-        <div class="menu">
-            <div class="menu-header">
-                <h2 class="menu-header-title">La note enchantée</h2>
-            </div>
-            <section class="grid">
-                <div class="grid-bloc">
-                <div class="grid-title">
-                    <h3>Entrées</h3>
-                </div>
-                <div class="menu-grid-bloc">
-                        <div class="dish-and-price">
-                            <div class="menu-case-dish">
-                            <div class="dish-and-price-title">
-                                <h4>Ravioles de foie gras</h4>
-                            </div>
-                            <div class="dish-and-price-subtitle">
-                                <p>Accompagnés de leur crème à la truffe</p>
-                            </div>
-                            </div>
-                            <p class="price">25€</p>
-                        </div>
-                        <div class="menu-check-confirmation">
-                            <div class="menu-item">
-                                <i class="fa-check fas menu-item-icon"></i>
-                            </div>
-                        </div>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Caviar osciètre</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Sur blini à la farine de blé noir</p>
-                        </div>
-                        </div>
-                        <p class="price">35€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
+      <div class="menu">
+        <div class="menu-header">
+          <h2 class="menu-header-title">La note enchantée</h2>
+          <i class="far fa-heart"></i>
+          <i class="fas fa-heart"></i>
+        </div>
+        <section class="grid">
+          <div class="grid-bloc">
+            <div class="grid-title">
+              <h3>Entrées</h3>
             </div>
             <div class="menu-grid-bloc">
-                <div class="dish-and-price">
-                    <div class="menu-case-dish">
-                    <div class="dish-and-price-title">
-                        <h4>Homard et espuma de potiron</h4>
-                    </div>
-                    <div class="dish-and-price-subtitle">
-                        <p>Mariné aux zestes d'orange</p>
-                    </div>
-                    </div>
-                    <p class="price">20€</p>
-                </div>
-                <div class="menu-check-confirmation">
-                    <div class="menu-item">
-                        <i class="fa-check fas menu-item-icon"></i>
-                    </div>
-                </div>
-        </div>
-        <div class="menu-grid-bloc">
-            <div class="dish-and-price">
+              <div class="dish-and-price">
                 <div class="menu-case-dish">
-                <div class="dish-and-price-title">
-                    <h4>Foie gras de canard cuit entier</h4>
+                  <div class="dish-and-price-title">
+                    <h4>Ravioles de foie gras</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Accompagnés de leur crème à la truffe</p>
+                  </div>
                 </div>
-                <div class="dish-and-price-subtitle">
-                    <p>Confiture de figue et pain toasté</p>
+                <p class="price">25€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
                 </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Caviar osciètre</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Sur blini à la farine de blé noir</p>
+                  </div>
                 </div>
                 <p class="price">35€</p>
-            </div>
-            <div class="menu-check-confirmation">
+              </div>
+              <div class="menu-check-confirmation">
                 <div class="menu-item">
-                    <i class="fa-check fas menu-item-icon"></i>
+                  <i class="fa-check fas menu-item-icon"></i>
                 </div>
-            </div>
-            </div>
-            </div>
-            <div class="grid-bloc">
-                <div class="grid-title">
-                    <h3>Plats</h3>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Filet de boeufs au herbes</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Accompagné de sa ribambelle de légumes</p>
-                        </div>
-                        </div>
-                        <p class="price">40€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Parmentier de queue de boeuf</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>A la truffe noire sur sa purée de panais</p>
-                        </div>
-                        </div>
-                        <p class="price">35€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
+              </div>
             </div>
             <div class="menu-grid-bloc">
-                <div class="dish-and-price">
-                    <div class="menu-case-dish">
-                    <div class="dish-and-price-title">
-                        <h4>Filet de turbot</h4>
-                    </div>
-                    <div class="dish-and-price-subtitle">
-                        <p>Aux agrumes</p>
-                    </div>
-                    </div>
-                    <p class="price">44€</p>
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Homard et espuma de potiron</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Mariné aux zestes d'orange</p>
+                  </div>
                 </div>
-                <div class="menu-check-confirmation">
-                    <div class="menu-item">
-                        <i class="fa-check fas menu-item-icon"></i>
-                    </div>
+                <p class="price">20€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
                 </div>
-        </div>
-        </div>
-        <div class="grid-bloc">
-                <div class="grid-title">
-                    <h3>Desserts</h3>
-                </div>
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Paris-brest</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Revisité</p>
-                        </div>
-                        </div>
-                        <p class="price">18€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
-                </div> 
-                <div class="menu-grid-bloc">
-                    <div class="dish-and-price">
-                        <div class="menu-case-dish">
-                        <div class="dish-and-price-title">
-                            <h4>Macaron au chocolat d'exception</h4>
-                        </div>
-                        <div class="dish-and-price-subtitle">
-                            <p>Et glace à la vanille de Madagascar</p>
-                        </div>
-                        </div>
-                        <p class="price">22€</p>
-                    </div>
-                    <div class="menu-check-confirmation">
-                        <div class="menu-item">
-                            <i class="fa-check fas menu-item-icon"></i>
-                        </div>
-                    </div>
+              </div>
             </div>
             <div class="menu-grid-bloc">
-                <div class="dish-and-price">
-                    <div class="menu-case-dish">
-                    <div class="dish-and-price-title">
-                        <h4>Mousse au chocolat</h4>
-                    </div>
-                    <div class="dish-and-price-subtitle">
-                        <p>Au piment d'espelette et à la truffe noire</p>
-                    </div>
-                    </div>
-                    <p class="price">23€</p>
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Foie gras de canard cuit entier</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Confiture de figue et pain toasté</p>
+                  </div>
                 </div>
-                <div class="menu-check-confirmation">
-                    <div class="menu-item">
-                        <i class="fa-check fas menu-item-icon"></i>
-                    </div>
+                <p class="price">35€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
                 </div>
-        </div>  
-        </div>
-            </section>
-        </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-bloc">
+            <div class="grid-title">
+              <h3>Plats</h3>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Filet de boeufs au herbes</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Accompagné de sa ribambelle de légumes</p>
+                  </div>
+                </div>
+                <p class="price">40€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Parmentier de queue de boeuf</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>A la truffe noire sur sa purée de panais</p>
+                  </div>
+                </div>
+                <p class="price">35€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Filet de turbot</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Aux agrumes</p>
+                  </div>
+                </div>
+                <p class="price">44€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-bloc">
+            <div class="grid-title">
+              <h3>Desserts</h3>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Paris-brest</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Revisité</p>
+                  </div>
+                </div>
+                <p class="price">18€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Macaron au chocolat d'exception</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Et glace à la vanille de Madagascar</p>
+                  </div>
+                </div>
+                <p class="price">22€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+            <div class="menu-grid-bloc">
+              <div class="dish-and-price">
+                <div class="menu-case-dish">
+                  <div class="dish-and-price-title">
+                    <h4>Mousse au chocolat</h4>
+                  </div>
+                  <div class="dish-and-price-subtitle">
+                    <p>Au piment d'espelette et à la truffe noire</p>
+                  </div>
+                </div>
+                <p class="price">23€</p>
+              </div>
+              <div class="menu-check-confirmation">
+                <div class="menu-item">
+                  <i class="fa-check fas menu-item-icon"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </section>
     <div class="command">
-        <button class="btn">Commander</button>
+      <button class="btn">Commander</button>
     </div>
     <footer>
-        <h4>Ohmyfood</h4>
-        <p>
-            <i class="fas fa-utensils"></i>
-            proposer un restaurant
-        </p>
-        <p>
-            <i class="fas fa-hands-helping"></i>
-            Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p>
-            <a href="mailto:contact@ohmyfood.fr">Contact</a>
-        </p>
+      <h4>Ohmyfood</h4>
+      <p>
+        <i class="fas fa-utensils"></i>
+        proposer un restaurant
+      </p>
+      <p>
+        <i class="fas fa-hands-helping"></i>
+        Devenir partenaire
+      </p>
+      <p>Mentions légales</p>
+      <p>
+        <a href="mailto:contact@ohmyfood.fr">Contact</a>
+      </p>
     </footer>
-</body>
+  </body>
 </html>
