--- a/index.html
+++ b/index.html
@@ -1,116 +1,131 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ohmyfood</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <script src="https://kit.fontawesome.com/c6b5df462f.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/main.css" />
+    <script
+      src="https://kit.fontawesome.com/c6b5df462f.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div class="loader">
-        <span class="loader-quart"></span>
+      <span class="loader-quart"></span>
     </div>
     <header>
-        <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood">
+      <img class="logo" src="./images/logo/ohmyfood.png" alt="logo ohmyfood" />
     </header>
     <main>
-        <div class="city">
-            <i class="map fa-solid fa-location-dot"></i>
-            <h1>Paris, Belleville</h1>
-        </div>
-        <section class="Explorer">
-            <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception, séléctionnez par nos soins</p>
-            <button class="btn">Explorer nos restaurants</button>
-        </section>
-        <section class="working">
-            <div class="container">
-                <h2 class="working_title">Fonctionnement</h2>
-                <div class="working__steps">
-                  <div class="working__step">
-                      <div class="working_number">1</div>
-                    <i class="working__icon fas fa-mobile-alt"></i>
-                    <span class="text">Choisissez un restaurant</span>
-                  </div>
-                  <div class="working__step">
-                      <div class="working_number">2</div>
-                    <i class="working__icon fas fa-list-ul"></i>
-                    <span class="text">Composez votre menu</span>
-                  </div>
-                  <div class="working__step">
-                      <div class="working_number">3</div>
-                    <i class="working__icon fas fa-store"></i>
-                    <span class="text">Dégustez au restaurant</span>
-                  </div>
-              </div>
-              </div>
-        </section>
-        <section class="restaurant">
-            <h3>Restaurants</h3>
-            <div class="restaurant-block">
-                <a href="Lapalettedugout.html" class="restaurant-card new">
-                    <div class="card-image">
-                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
-                    </div>
-                    <div class="card-description">
-                        <h4>La palette du goût</h4>
-                        <p>Menilmontant</p>
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
-                    </div>
-                </a>
-                <a href="Lanoteenchantée.html" class="restaurant-card new">
-                    <div class="card-image">
-                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
-                    </div>
-                    <div class="card-description">
-                        <h4>La note enchantée</h4>
-                        <p>Charonne</p>
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
-                    </div>
-                </a>
-                <a href="Alafrançaise.html" class="restaurant-card">
-                    <div class="card-image">
-                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
-                    </div>
-                    <div class="card-description">
-                        <h4>A la française</h4>
-                        <p>Cité Rouge</p>
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
-                    </div>
-                </a>
-                <a href="Ledelicedessens.html" class="restaurant-card">
-                    <div class="card-image">
-                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le délice des sens">
-                    </div>
-                    <div class="card-description">
-                        <h4>Le délice des sens</h4>
-                        <p>Folie-Méricourt</p>
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
-                    </div>
-                </a>
+      <div class="city">
+        <i class="map fa-solid fa-location-dot"></i>
+        <h1>Paris, Belleville</h1>
+      </div>
+      <section class="Explorer">
+        <h2>Réservez le menu qui vous convient</h2>
+        <p>Découvrez des restaurants d'exception, séléctionnez par nos soins</p>
+        <button class="btn">Explorer nos restaurants</button>
+      </section>
+      <section class="working">
+        <div class="container">
+          <h2 class="working_title">Fonctionnement</h2>
+          <div class="working__steps">
+            <div class="working__step">
+              <div class="working_number">1</div>
+              <i class="working__icon fas fa-mobile-alt"></i>
+              <span class="text">Choisissez un restaurant</span>
             </div>
-        </section>
+            <div class="working__step">
+              <div class="working_number">2</div>
+              <i class="working__icon fas fa-list-ul"></i>
+              <span class="text">Composez votre menu</span>
+            </div>
+            <div class="working__step">
+              <div class="working_number">3</div>
+              <i class="working__icon fas fa-store"></i>
+              <span class="text">Dégustez au restaurant</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="restaurant">
+        <h3>Restaurants</h3>
+        <div class="restaurant-block">
+          <a href="Lapalettedugout.html" class="restaurant-card new">
+            <div class="card-image">
+              <img
+                src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="la palette du goût"
+              />
+            </div>
+            <div class="card-description">
+              <h4>La palette du goût</h4>
+              <p>Menilmontant</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </a>
+          <a href="Lanoteenchantée.html" class="restaurant-card new">
+            <div class="card-image">
+              <img
+                src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="la note enchantée"
+              />
+            </div>
+            <div class="card-description">
+              <h4>La note enchantée</h4>
+              <p>Charonne</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </a>
+          <a href="Alafrançaise.html" class="restaurant-card">
+            <div class="card-image">
+              <img
+                src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="A la française"
+              />
+            </div>
+            <div class="card-description">
+              <h4>A la française</h4>
+              <p>Cité Rouge</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </a>
+          <a href="Ledelicedessens.html" class="restaurant-card">
+            <div class="card-image">
+              <img
+                src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="le délice des sens"
+              />
+            </div>
+            <div class="card-description">
+              <h4>Le délice des sens</h4>
+              <p>Folie-Méricourt</p>
+              <i class="far fa-heart"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </a>
+        </div>
+      </section>
     </main>
     <footer>
-        <h5>Ohmyfood</h5>
-        <p>
-            <i class="fas fa-utensils"></i>
-            proposer un restaurant
-        </p>
-        <p>
-            <i class="fas fa-hands-helping"></i>
-            Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p>
-            <a href="mailto:contact@ohmyfood.fr">Contact</a>
-        </p>
-    </footer> 
-</body>
+      <h5>Ohmyfood</h5>
+      <p>
+        <i class="fas fa-utensils"></i>
+        proposer un restaurant
+      </p>
+      <p>
+        <i class="fas fa-hands-helping"></i>
+        Devenir partenaire
+      </p>
+      <p>Mentions légales</p>
+      <p>
+        <a href="mailto:contact@ohmyfood.fr">Contact</a>
+      </p>
+    </footer>
+  </body>
 </html>
